<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="elior.library.SignUpActivity">

    <EditText
        android:id="@+id/Address_EditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="350dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintLeft_toRightOf="@+id/textView2"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/FirstName_EditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="209dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintLeft_toRightOf="@+id/Password"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/LastName_EditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="277dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintLeft_toRightOf="@+id/textView4"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/Email"
        android:layout_width="84dp"
        android:layout_height="37dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="85dp"
        android:text="@string/Email"
        android:textSize="24sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/Password"
        android:layout_width="122dp"
        android:layout_height="46dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="209dp"
        android:text="@string/Firstname"
        android:textSize="24sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="122dp"
        android:layout_height="46dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="350dp"
        android:text="@string/Address"
        android:textSize="24sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="122dp"
        android:layout_height="46dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="277dp"
        android:text="@string/Lastname"
        android:textSize="24sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="122dp"
        android:layout_height="46dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="144dp"
        android:text="@string/Password"
        android:textSize="24sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/EditText_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="85dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintLeft_toRightOf="@+id/Email"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/Password_EditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="144dp"
        android:ems="10"
        android:inputType="textPassword"
        app:layout_constraintLeft_toRightOf="@+id/textView"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="251dp"
        android:layout_height="44dp"
        android:text="@string/sign_up_title"
        android:textAlignment="center"
        android:textColor="@color/colorPrimary"
        android:textSize="30sp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="16dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <Button
        android:id="@+id/submit_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="86dp"
        android:text="@string/Submit"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="447dp" />

    <Button
        android:id="@+id/SignIn_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="72dp"
        android:layout_marginTop="447dp"
        android:text="@string/sign_in_btn"
        app:layout_constraintHorizontal_bias="0.738"
        app:layout_constraintLeft_toRightOf="@+id/submit_btn"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/addImg"
        android:layout_width="82dp"
        android:layout_height="71dp"
        android:layout_marginLeft="19dp"
        android:contentDescription="@string/tap_to_add_img"

        app:layout_constraintLeft_toRightOf="@+id/textView3"
        app:srcCompat="@drawable/common_google_signin_btn_icon_light_normal_background"
        tools:layout_editor_absoluteY="0dp" />


</android.support.constraint.ConstraintLayout>
