<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="elior.library.MainActivity">

    <TextView
        android:id="@+id/Email"
        android:layout_width="84dp"
        android:layout_height="37dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="158dp"
        android:text="@string/Email"
        android:textSize="24sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/Password"
        android:layout_width="122dp"
        android:layout_height="46dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="217dp"
        android:text="@string/Password"
        android:textSize="24sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/InputBox_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="158dp"
        app:layout_constraintLeft_toRightOf="@+id/Email"
        android:layout_marginLeft="38dp" />

    <EditText
        android:id="@+id/inputBox_Password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="217dp"
        android:ems="10"
        android:inputType="textPassword"
        app:layout_constraintLeft_toRightOf="@+id/Password"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="288dp"
        android:layout_height="77dp"
        android:text="@string/Wellcome"
        android:textAlignment="center"
        android:textColor="@color/colorPrimary"
        android:textSize="30sp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="44dp"
        android:layout_marginLeft="48dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <Button
        android:id="@+id/submit_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="82dp"
        android:text="@string/Submit"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="308dp" />

    <Button
        android:id="@+id/sign_up_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="72dp"
        android:layout_marginTop="308dp"
        android:onClick="onClick"
        android:text="@string/sign_up_btn"
        app:layout_constraintHorizontal_bias="0.812"
        app:layout_constraintLeft_toRightOf="@+id/submit_btn"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</android.support.constraint.ConstraintLayout>
