<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="elior.library.MenuActivity">

    <Button
        android:id="@+id/README"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="71dp"
        android:layout_marginTop="418dp"
        android:text="@string/README"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/map_btn" />

    <Button
        android:id="@+id/map_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="84dp"
        android:layout_marginTop="213dp"
        android:text="@string/map"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lastname_TextView" />

    <TextView
        android:id="@+id/Details"
        android:layout_width="152dp"
        android:layout_height="34dp"
        android:layout_marginLeft="42dp"
        android:layout_marginTop="36dp"
        android:text="@string/UserDetails"
        android:textAllCaps="false"
        android:textColor="@color/colorPrimary"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/lastname_TextView"
        android:layout_width="152dp"
        android:layout_height="34dp"
        android:layout_marginLeft="42dp"
        android:layout_marginTop="43dp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/firstname_textView" />

    <TextView
        android:id="@+id/email_TextView"
        android:layout_width="152dp"
        android:layout_height="34dp"
        android:layout_marginLeft="42dp"
        android:layout_marginTop="32dp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lastname_TextView" />

    <TextView
        android:id="@+id/firstname_textView"
        android:layout_width="152dp"
        android:layout_height="34dp"
        android:layout_marginLeft="42dp"
        android:layout_marginTop="24dp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Details" />

</android.support.constraint.ConstraintLayout>
